Smaller font size on mobile, added scroll to top animation and fixed card flip animation with jquery update

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ html, body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -42,7 +41,7 @@ body {
 }
 
 .custom-control-label {
-  font-family: 'Poppins' !important;
+  font-family: 'Poppins', sans-serif !important;
   font-size: .8em !important;
   font-weight: 500 !important;
 }
@@ -78,8 +77,14 @@ body {
 
 .subtitle {
   color: #61969e;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-size: 1em;
+}
+
+@media (max-width: 500px) {
+  .subtitle {
+    font-size: .8em;
+  }
 }
 
 ::-webkit-scrollbar {
@@ -103,7 +108,7 @@ body {
   font-size: 3em;
   color: #a38da8;
   text-align: center;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -124,7 +129,7 @@ body {
 }
 
 .body-text {
-  font-family: 'Lato';
+  font-family: 'Lato', sans-serif;
 }
 
 /* Nav Bar */
@@ -146,6 +151,10 @@ body {
   .navbar-brand {
     float: right;
   }
+}
+
+.navbar-brand {
+  font-size: 16px !important;
 }
 
 .navbar {
@@ -185,7 +194,7 @@ body {
 .nav {
   padding-bottom: 6px;
   font-size: 1em;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
 }
 
 .nav-active {
@@ -212,7 +221,7 @@ body {
   font-weight: bold;
   position: relative;
   text-align: center;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
   display: block;
   position: relative;
@@ -316,14 +325,36 @@ body {
   opacity: 0;
 }
 
+.social-link-icons-no-js {
+  margin-left: .2em;
+  margin-right: .2em;
+  text-decoration: none !important;
+  color: #73b0b9 !important;
+}
+
+.social-link-icons-no-js:hover {
+  opacity: .7 !important;
+}
+
 /* ABOUT PAGE */
+
+
 
 .card-subtitle {
   color: #17a2b8;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-size: 1.5em;
   text-align: center;
   font-weight: bold;
+}
+
+@media (max-width: 500px) {
+  .card-subtitle {
+    font-size: 1.1em;
+  }
+  .material-icons {
+    font-size: 16px !important;
+  }
 }
 
 .card-subtitle-left {
@@ -343,6 +374,7 @@ body {
 }
 
 .card-face {
+  height: 100% !important;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   z-index: 2;
@@ -366,8 +398,14 @@ body {
 
 .card-title {
   font-size: 1.7em;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
+}
+
+@media (max-width: 500px) {
+  .card-title {
+    font-size: 1.2em;
+  }
 }
 
 .card-title-center {
@@ -384,6 +422,12 @@ body {
 
 .page-container {
   padding-top: 90px;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.page-container-js-disabled {
+  padding-top: 12px;
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -459,8 +503,8 @@ li.project-details-list::before {
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
-  transform-origin: center right;
-  transition: transform 1s;
+  transform-origin: right;
+  transition: transform .8s;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23) !important;
 }
 
@@ -471,7 +515,7 @@ li.project-details-list::before {
 .project-subtitle {
   color: #17a2b8;
   /* font-weight: bold; */
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-size: .8em;
 }
 
@@ -491,9 +535,17 @@ li.project-details-list::before {
 }
 
 .project-text {
-  font-family: 'Lato';
-  font-size: 1.1em;
+  font-family: 'Lato', sans-serif;
+  font-size: 1em;
   font-weight: 400;
+}
+
+/* Mobile */
+
+@media (max-width: 500px) {
+  .project-text {
+    font-size: .8em;
+  }
 }
 
 .text-color-light {
@@ -540,7 +592,7 @@ li.project-details-list::before {
   border-radius: 15px !important;
   margin-bottom: 10px;
   padding: 1px 6px 1px 6px !important;
-  font-family: 'Lato';
+  font-family: 'Lato', sans-serif;
   border-width: 1px;
 }
 
@@ -672,7 +724,7 @@ li.project-details-list span {
 }
 
 .download-link-and-icon {
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-size: 1.1em;
   cursor: pointer;
   font-weight: 300;
